--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,13 @@
   <link rel="apple-touch-icon" href="/icon.png">
 
   <!-- Bootstrap CSS via CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaO43E60x5KVHgfMZp6QJ1Lhp5jS13go8UJdQ4JlVVSOASzsd2ymBYkFLZm" crossorigin="anonymous">
 
   <!-- Your Application's CSS -->
   <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
+
+  <!-- Your Application's JavaScript -->
+  <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 </head>
 
 <body>
@@ -55,10 +58,6 @@
     <%= yield %>
   </div>
 
-  <!-- Bootstrap JavaScript Bundle via CDN (includes Popper) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-  <!-- Your Application's JavaScript -->
-  <%= javascript_include_tag "application", "data-turbo-track": "reload" %>
 </body>
+
 </html>
