--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,19 @@
   <!-- Additional meta tags -->
   <%= yield :head %>
 
-  <link rel="icon" href="/icon.png" type="image/png">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/icon.png">
-
   <!-- Bootstrap CSS via CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaO43E60x5KVHgfMZp6QJ1Lhp5jS13go8UJdQ4JlVVSOASzsd2ymBYkFLZm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Your Application's CSS -->
   <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
 
+  <%= javascript_include_tag "#{STRIPE_JS_HOST}/v3/" %>
+
   <!-- Your Application's JavaScript -->
   <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+
+  <!-- Bootstrap JS and Popper via CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 
 <body>
@@ -38,7 +39,7 @@
               <%= link_to 'Projects', projects_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
+              <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link", data: { turbo: false } %>
             </li>
           <% else %>
             <li class="nav-item">
@@ -59,5 +60,4 @@
   </div>
 
 </body>
-
 </html>
