--- a/app/views/materials/_form.html.erb
+++ b/app/views/materials/_form.html.erb
@@ -61,6 +61,7 @@
 
   <div class="form-group mt-4"> <!-- Added mt-4 for top margin -->
     <%= form.submit class: "btn btn-primary" %>
+    <%= link_to "Back to Materials", project_materials_path(@project), class: "btn btn-secondary" %>
     <%= link_to "Back to Project", project_path(@project), class: "btn btn-secondary" %>
   </div>
 <% end %>
