--- a/app/views/workers/_form.html.erb
+++ b/app/views/workers/_form.html.erb
@@ -44,6 +44,7 @@
         <div class="text-start">
           <%= form.submit class: "btn btn-primary" %>
           <%= link_to "Back to Workers", project_workers_path(@project), class: "btn btn-secondary" %>
+          <%= link_to "Back to Project", project_path(@project), class: "btn btn-secondary" %>
         </div>
       <% end %>
     </div>
